--- a/source/sass/global/page.scss
+++ b/source/sass/global/page.scss
@@ -1,5 +1,6 @@
 .page__body {
-  font-family: Arial, sans-serif;
+  font-family: "Poppins", "Open Sans", sans-serif;
+
   background-color: $color-background;
   margin: 0;
   padding: 0;
