--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/variables.scss";
 @import "global/container.scss";
 @import "global/page.scss";
+@import "global/fonts.scss";
 
 @import "block/sidebar.scss";
 @import "block/content.scss";
