--- a/source/sass/block/sidebar.scss
+++ b/source/sass/block/sidebar.scss
@@ -1,39 +1,57 @@
 .sidebar {
   width: 306px;
+  max-width: 306px;
   background-color: $color-default-white;
   color: $color-default-black;
+  display: flex;
+  flex-direction: column;
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 38px;
     display: flex;
+    align-items: center;
+    font-size: 26px;
+    font-weight: 600;
+
+  }
+
+  &__title-v {
+    font-size: 10px;
+    color: $color-font-link;
+    margin-left: 6px;
+    margin-top: 8px;
   }
 
   &__logo {
     display: inline-block;
-    margin-right: 14px;
+    margin-right: 6px;
+
+
   }
 
   &__menu {
     list-style: none;
     padding: 0;
   }
-
+&__item {
+  margin-bottom: 20px;
+}
   &__link {
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     padding: 10px;
     color: $color-font-link;
     text-decoration: none;
     position: relative;
-
+font-size: 14px;
     &::after {
       content: "";
       position: absolute;
       width: 16px;
       height: 16px;
       background-image: url("../img/svg/arrow.svg");
-      right: 10px;
+      right: 6px;
     }
 
     &:hover {
@@ -43,24 +61,32 @@
       &::after {
         background-image: url("../img/svg/arrow-white.svg");
       }
-
-
-    }
-  }
-    &__icon {
-      display: inline-block;
-      margin-right: 14px;
-    }
-
-    &__manager,
-    &__rating,
-    &__experience {
-      margin: 5px 0;
-    }
-
-    @media (max-width: 680px) {
-      width: 100%;
-      height: auto;
     }
   }
 
+  &__icon {
+    display: inline-block;
+    margin-right: 14px;
+  }
+
+  &__user {
+    margin-top: auto;
+  }
+
+  &__manager,
+  &__rating,
+  &__experience {
+    margin: 5px 0;
+  }
+
+  // @include tablet {
+  //   width: 100%;
+  //   height: auto;
+  // }
+
+  @include mobile {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+}
