--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,14 +1,15 @@
 @import "vendor/normalize.scss";
 
-
 @import "global/variables.scss";
+@import "global/mixins.scss";
+@import "global/fonts.scss";
 @import "global/container.scss";
 @import "global/page.scss";
-@import "global/fonts.scss";
+
 
 @import "block/sidebar.scss";
 @import "block/content.scss";
-
+@import "block/table.scss";
 
 
 
