--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,13 +1,25 @@
 .container {
   display: flex;
+  // max-width: $max-desktop;
 
   &__block {
-    padding: 20px;
+    padding:38px 30px;
     box-sizing: border-box;
     height: 100vh;
+
+    &--content {
+      padding: 46px 78px 46px 71px;
+
+    }
+
+
   }
 
-  @media (max-width: 680px) {
+  @include max-desktop {
+    margin: auto;
+  }
+
+  @include mobile {
     flex-direction: column;
   }
 }
