--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -22,3 +22,10 @@ $color-background-status--inactive:#FFC5C5;
 
 $color-font-paginaton--active: #FFFFFF;
 $color-background-paginaton--active: #5932EA;
+
+// sizes
+$desktop-max: 1440px;
+$desktop: 1040px;
+$tablet: 768px;
+$mobile: 320px;
+$max-desktop: 1440px;
