--- a/source/sass/block/table.scss
+++ b/source/sass/block/table.scss
@@ -1,10 +1,7 @@
 .table {
-
-  background-color: #fff;
-
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: $color-default-white;
+  box-shadow: 0 0 10px $color-default-black;
   border-radius: 25px;
-
   margin-bottom: 20px;
 
   &__title {
@@ -21,9 +18,8 @@
 
   &__container {
     width: 100%;
-
     margin-bottom: 20px;
-    padding: 0 20px;
+    padding: 0 15px 0 38px;
   }
 
   &__header {
@@ -31,16 +27,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
   }
 
   &__top {
     position: relative;
 
-
-
     &-cell {
-      padding: 15px;
+      padding: 15px 15px 15px 0;
       text-align: left;
       font-size: 14px;
       font-weight: 500;
@@ -57,29 +50,28 @@
     }
   }
 
-
   &__row {
     padding-left: 50px;
+
+    &:last-child .table__cell {
+      border-bottom: none;
+    }
   }
 
   &__cell {
-text-wrap: nowrap;
-    padding: 18px 15px 15px 0 ;
+    text-wrap: nowrap;
+    padding: 18px 15px 20px 0;
     text-align: left;
-
-border-bottom: 1px solid $color-background;
+    border-bottom: 1px solid $color-background;
     font-size: 14px;
     font-weight: 500;
-
-
-
   }
 
   &__status {
     display: block;
     text-align: center;
     border: 1px solid $color-background;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 5px;
     width: 80px;
     max-width: 80px;
@@ -98,45 +90,37 @@ border-bottom: 1px solid $color-background;
       border-color: $color-font-status--inactive;
     }
   }
-
 }
 
 .table__top-cell:nth-child(1),
 .table__cell:nth-child(1) {
-  width: 18%;
+  width: 19%;
   margin-left: 20px;
-
 }
+
 .table__top-cell:nth-child(2),
 .table__cell:nth-child(2) {
-  width: 15%
-
+  width: 15%;
 }
 
 .table__top-cell:nth-child(3),
 .table__cell:nth-child(3) {
-  width: 15%
-
+  width: 16%;
 }
 
 .table__top-cell:nth-child(4),
 .table__cell:nth-child(4) {
-  width: 15%
-
+  width: 23%;
 }
 
 .table__top-cell:nth-child(5),
 .table__cell:nth-child(5) {
-  width: 16%
-
+  width: 15%;
 }
 
 .table__top-cell:nth-child(6),
 .table__cell:nth-child(6) {
-  width: 8%;
-
-
-
+  width: 12%;
 }
 
 @include tablet {
@@ -170,6 +154,5 @@ border-bottom: 1px solid $color-background;
         font-size: 0.8em;
       }
     }
-
   }
 }
