--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,9 +4,11 @@ $color-default-black: #000000;
 $color-default-white: #FFFFFF;
 
 $color-background : #EEEEEE;
+$color-background-light: #F9FBFF;
 
 $color-text-default: #292D32;
 $color-text-inactive: #B5B7C0;
+$color-text-focus: #3498db;
 
 $color-font-link: #9197B3;
 $color-font-link--hover: #FFFFFF;
