--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "global/fonts.scss";
 @import "global/container.scss";
 @import "global/page.scss";
+@import "global/input.scss";
 
 
 @import "block/sidebar.scss";
