--- a/source/sass/block/sidebar.scss
+++ b/source/sass/block/sidebar.scss
@@ -1,5 +1,6 @@
 .sidebar {
   width: 306px;
+  height: 100vh;
   max-width: 306px;
   background-color: $color-default-white;
   color: $color-default-black;
