--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -3,7 +3,7 @@
   // max-width: $max-desktop;
 
   &__block {
-    padding:38px 30px;
+    padding:38px 30px 77px;
     box-sizing: border-box;
     height: 100vh;
 
