--- a/source/sass/block/table.scss
+++ b/source/sass/block/table.scss
@@ -1,4 +1,5 @@
 .table {
+  box-sizing: border-box;
   background-color: $color-default-white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
@@ -18,8 +19,11 @@
 
   &__container {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 29px;
     padding: 0 15px 0 38px;
+
+
+
   }
 
   &__header {
@@ -52,10 +56,6 @@
 
   &__row {
     padding-left: 50px;
-
-    &:last-child .table__cell {
-      border-bottom: none;
-    }
   }
 
   &__cell {
@@ -89,6 +89,12 @@
       color: $color-font-status--inactive;
       border-color: $color-font-status--inactive;
     }
+  }
+
+  &__pagination {
+
+    margin-bottom: 40px;
+    margin-right: 33px;
   }
 }
 
