--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -22,8 +22,11 @@ $color-background-status--active:#16C098;
 $color-background-status--inactive:#FFC5C5;
 
 
-$color-font-paginaton--active: #FFFFFF;
-$color-background-paginaton--active: #5932EA;
+$color-paginaton-font-active: #FFFFFF;
+$color-paginaton-background-active: #5932EA;
+$color-pagination-font-default: #404B52;
+$color-pagination-backgrounf-default: #F5F5F5;
+
 
 // sizes
 $desktop-max: 1440px;
