--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,7 +6,7 @@
 @import "global/container.scss";
 @import "global/page.scss";
 @import "global/input.scss";
-
+@import "global/pagination.scss";
 
 @import "block/sidebar.scss";
 @import "block/content.scss";
