--- a/source/sass/block/sidebar.scss
+++ b/source/sass/block/sidebar.scss
@@ -1,13 +1,10 @@
 .sidebar {
-  width: 306px;
-  height: 100%;
-  max-width: 306px;
+  width: 28%;
   background-color: $color-default-white;
   color: $color-default-black;
   padding: 38px 30px 77px;
   display: flex;
   flex-direction: column;
-
 
   &__title {
     margin-bottom: 38px;
@@ -15,7 +12,6 @@
     align-items: center;
     font-size: 26px;
     font-weight: 600;
-
   }
 
   &__title-v {
@@ -28,8 +24,6 @@
   &__logo {
     display: inline-block;
     margin-right: 6px;
-
-
   }
 
   &__menu {
@@ -39,7 +33,7 @@
 
   &__item {
     margin-bottom: 20px;
-    width: 250px;
+    width: 100%;
   }
 
   &__link {
@@ -86,14 +80,61 @@
     margin: 5px 0;
   }
 
-  // @include tablet {
-  //   width: 100%;
-  //   height: auto;
-  // }
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px;
+
+    &__title {
+      font-size: 0;
+      margin: 0;
+    }
+
+    &__menu {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__item {
+      width: auto;
+      margin: 0;
+    }
+
+    &__link {
+      font-size: 0;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    &__user {
+      margin: 0;
+    }
+  }
 
   @include mobile {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
+    position: relative;
+
+    &__menu {
+      display: none;
+
+      &--active {
+        background: $color-background;
+        position: absolute;
+        display: flex;
+        width: 100%;
+        top: 40px;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+      }
+    }
+
+    &__link {
+      padding-left: 30px;
+      font-size: 17px;
+    }
   }
 }
