--- a/source/sass/block/table.scss
+++ b/source/sass/block/table.scss
@@ -1,4 +1,5 @@
 .table {
+  width: 100%;
   box-sizing: border-box;
   background-color: $color-default-white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -21,9 +22,6 @@
     width: 100%;
     margin-bottom: 29px;
     padding: 0 15px 0 38px;
-
-
-
   }
 
   &__header {
@@ -43,19 +41,11 @@
       font-weight: 500;
       color: $color-text-inactive;
     }
-
-    // &::after {
-    //   position: absolute;
-    //   content: "";
-    //   width: 200%;
-    //   height: 1px;
-    //   background-color: $color-background;
-    //   left: -30%;
-    // }
   }
 
   &__row {
     padding-left: 50px;
+
   }
 
   &__cell {
@@ -135,6 +125,13 @@
 
     &__cell {
       padding: 10px;
+      font-size: 10px;
+    }
+
+    &__top {
+      &-cell {
+        font-size: 10px;
+      }
     }
   }
 }
@@ -144,8 +141,15 @@
     padding: 5px;
 
     &__title {
-      font-size: 1.2em;
+      font-size: 8px;
     }
+
+    &__top {
+      &-cell {
+        font-size: 8px;
+      }
+    }
+
 
     &__header {
       &__cell {
